test/classes/initializers/errors/iteratorHashMethodCalled.good
iteratorHashMethodCalled.chpl:4: error: iterators can't be the hash method, please rename this iterator
iteratorHashMethodCalled.chpl:4: In iterator 'hash':
iteratorHashMethodCalled.chpl:5: error: 'return' statements with values are not allowed in iterators
iteratorHashMethodCalled.chpl:4: note: 'hash' is declared as an iterator here
